--- a/src/assets/tailwind.input.css
+++ b/src/assets/tailwind.input.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .hashtag {
+    @apply px-2 mx-1 my-1 border border-blue-300 rounded-2xl;
+  }
+}
