--- a/src/assets/tailwind.input.css
+++ b/src/assets/tailwind.input.css
@@ -4,6 +4,6 @@
 
 @layer components {
   .hashtag {
-    @apply px-2 mx-1 my-1 border border-blue-300 rounded-2xl;
+    @apply mx-1 my-1 rounded-2xl border px-2 border-blue-300;
   }
 }
