--- a/src/assets/tailwind.input.css
+++ b/src/assets/tailwind.input.css
@@ -1,9 +1,11 @@
+/** @format */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer components {
-  .hashtag {
-    @apply mx-1 my-1 rounded-2xl border border-blue-300 px-2;
-  }
+	.hashtag {
+		@apply mx-1 my-1 rounded-2xl border border-blue-300 px-2;
+	}
 }
